--- a/CommentedCode/02-Samplers/MCMC/Metropolis.Rmd
+++ b/CommentedCode/02-Samplers/MCMC/Metropolis.Rmd
@@ -8,20 +8,20 @@ A simple Metropolis-Hastings MCMC in R
 ====
 
 ```{r global_options, include=FALSE}
-knitr::opts_chunk$set(fig.width=12, fig.height=8, fig.path='Figs/')
+
 
 ```
 
 
-```{r, echo = F}
+```{r, echo = F, message=F, warning=F}
 set.seed(123)
+library(coda)
 ```
-
 
 
 As a first step, we create some test data that will be used to fit our model. Let’s assume a linear relationship between the predictor and the response variable, so we take a linear model and add some noise.
 
-```{r test_data}
+```{r test_data, fig.width=5, fig.height=5}
 # This work is licensed under the Creative Commons Attribution-NonCommercial-ShareAlike 3.0 Unported License.
 trueA <- 5
 trueB <- 0
@@ -51,7 +51,7 @@ For estimating parameters in a Bayesian analysis, we need to derive the likeliho
 As an illustration, the last lines of the code plot the Likelihood for a range of parameter values of the slope parameter a. The result should look something like the below plot.
 
 
-```{r likelihood_fucntion}
+```{r likelihood_fucntion, fig.width=5, fig.height=5}
 # Likelihood function
 likelihood <- function(param){
     a = param[1]
@@ -154,8 +154,6 @@ acceptance = 1-mean(duplicated(chain[-(1:burnIn),]))
 ```
 
 
-<br />
-
 Again, working with the logarithms of the posterior might be a bit confusing at first, in particular when you look at the line where the acceptance probability is calculated as:
 
 $$(probab = exp(posterior(proposal) – posterior(chain[i,])))$$
@@ -164,36 +162,24 @@ To understand why we do this: note that $p1/p2 = exp[log(p1)-log(p2)]$
 
 The first steps of the algorithm may be biased by the initial value, and are therefore usually discarded for the further analysis (burn-in time). An interesting output to look at is the acceptance rate: how often was a proposal rejected by the metropolis-hastings acceptance criterion? The acceptance rate can be influenced by the proposal function: generally, the closer the proposals are, the larger the acceptance rate. Very high acceptance rates, however, are usually not beneficial: this means that the algorithms is “staying” at the same point, which results in a suboptimal probing of the parameter space (mixing). It can be shown that acceptance rates between 20% and 30% are optimal for typical applications (more on that here).
 
-Finally, we can plot the results. There are more elegant ways of plotting this which I discuss in another recent post, so check this out, but for the moment I didn’t want to use any packages, so we do it the hard way:
+Finally, we can plot the results. I transform the chain to an mcmc object, using the coda package, to be able to make a nice plot
 
 
 ```{r summary}
- ################ Summary ################ 
-par(mfrow = c(2,3))
-hist(chain[-(1:burnIn),1],nclass=30, , main="Posterior of a", xlab="True value = red line" )
-abline(v = mean(chain[-(1:burnIn),1]))
-abline(v = trueA, col="red" )
-hist(chain[-(1:burnIn),2],nclass=30, main="Posterior of b", xlab="True value = red line")
-abline(v = mean(chain[-(1:burnIn),2]))
-abline(v = trueB, col="red" )
-hist(chain[-(1:burnIn),3],nclass=30, main="Posterior of sd", xlab="True value = red line")
-abline(v = mean(chain[-(1:burnIn),3]) )
-abline(v = trueSd, col="red" )
-plot(chain[-(1:burnIn),1], type = "l", xlab="True value = red line" , main = "Chain values of a", )
-abline(h = trueA, col="red" )
-plot(chain[-(1:burnIn),2], type = "l", xlab="True value = red line" , main = "Chain values of b", )
-abline(h = trueB, col="red" )
-plot(chain[-(1:burnIn),3], type = "l", xlab="True value = red line" , main = "Chain values of sd", )
-abline(h = trueSd, col="red" )
-mtext("Posterior estimates for slope (a), intercept (b) and standard deviation of the error (sd)",font = 2, side = 3, line = -1, outer = TRUE, cex=0.85)
-mtext("Markov Chain of slope (a), intercept (b) and standard deviation of the error (sd)", font = 2, side = 3, line = -31, outer = TRUE, cex=0.85)
- 
-# for comparison:
+plot(mcmc(chain))
+summary(mcmc(chain)) 
+```
+
+
+Comparison with the normal lm:
+
+```{r}
 summary(lm(y~x))
 ```
-The resulting plots should look something like the ones above. You see that we retrieve more or less the original parameters that were used to create our data, and you also see that we get a certain area around the highest posterior values that also have some support by the data, which is the Bayesian equivalent of confidence intervals. 
-<br />
-<br />
+
+You see that we retrieve more or less the original parameters that were used to create our data, and you also see that we get a certain area around the highest posterior values that also have some support by the data, which is the Bayesian equivalent of confidence intervals. 
+
+
 
 ## References for further reading
 
