--- a/CommentedCode/02-Samplers/MCMC/Convergence.Rmd
+++ b/CommentedCode/02-Samplers/MCMC/Convergence.Rmd
@@ -96,12 +96,9 @@ run_metropolis_MCMC <- function(startvalue, iterations){
 So, let’s run the MCMC:
 
 ```{r running_MCMC}
-startvalue = c(4,2,8)
+startvalue = c(5,0,10)
 chain = run_metropolis_MCMC(startvalue, 10000)
 ```
-
-
-<br />
 
 #### Some simple summaries of the chain facilitated by coda
 
@@ -176,7 +173,7 @@ In our case, there is be no large correlations because I set up the example in t
 
 ```{r marginal_densities3}
 x <- (-(sampleSize-1)/2):((sampleSize-1)/2) + 20
-startvalue = c(4,2,8)
+y <-  trueA * x + trueB + rnorm(n=sampleSize,mean=0,sd=trueSd)
 chain = run_metropolis_MCMC(startvalue, 10000)
 betterPairs(data.frame(chain))
 ```
@@ -207,34 +204,38 @@ So, what to do if there is no convergence yet? Of course, you can always run the
 * Your proposal function is narrow compared to the distribution we sample from – high acceptance rate, but we don’t get anywhere, bad mixing
 * Your proposal function is too wide compared to the distribution we sample from – low acceptance rate, most of the time we stay where we are
 
-Let's create both situations so that you get the picture. Too narrow:
+Let's create both situations so that you get the picture. I'm turning back to the old data. Too narrow:
 
 ```{r}
+
+x <- (-(sampleSize-1)/2):((sampleSize-1)/2) + 20
+y <-  trueA * x + trueB + rnorm(n=sampleSize,mean=0,sd=trueSd)
+
 proposalfunction <- function(param){
   return(rnorm(3,mean = param, sd= c(0.001,0.5,0.3)))
 }
+
+startvalue = c(4,0,10)
+
 chain1 = run_metropolis_MCMC(startvalue, 10000)
 chain2 = run_metropolis_MCMC(startvalue, 10000)
-combinedchains = mcmc.list(chain, chain2) 
+combinedchains = mcmc.list(chain1, chain2) 
 plot(combinedchains)
-gelman.plot(combinedchains)
+#gelman.plot(combinedchains)
 ```
 
 Too wide
 
 ```{r}
 proposalfunction <- function(param){
-  return(rnorm(3,mean = param, sd= c(100000,100000,0.3)))
+  return(rnorm(3,mean = param, sd= c(1000,0.5,0.3)))
 }
 chain1 = run_metropolis_MCMC(startvalue, 10000)
 chain2 = run_metropolis_MCMC(startvalue, 10000)
-combinedchains = mcmc.list(chain, chain2) 
+combinedchains = mcmc.list(chain1, chain2) 
 plot(combinedchains)
-gelman.plot(combinedchains)
+#gelman.plot(combinedchains)
 ```
-
-
-
 
 
 As displayed in the figure, these problems can be seen in the trace plots. Theoretical considerations show that an acceptance rate of 20-30% is optimal for typical target distributions, but this is in practice not so helpful because you can still have very bad mixing although being at this level by having the proposal of one parameter too narrow and the proposal of another parameter too wide. Better to look at the trace-plots of the individual parameters. Again, correlations are a problem, so if you have strong correlations in parameter space, you can get bad mixing. Using multivariate proposals that are adjusted to the correlation structure can help, but in general it is better to avoid correlations if possible. The good news at last: most of the more “professional” MCMC sampling software such as Jags or WinBugs will do these things automatically for you.
