--- a/CommentedCode/02-Samplers/MCMC/LaplacesDeamon.Rmd
+++ b/CommentedCode/02-Samplers/MCMC/LaplacesDeamon.Rmd
@@ -404,5 +404,10 @@ print(Fit)
 
 
 
+---
+**Copyright, reuse and updates**: By Florian Hartig. Updates will be posted at https://github.com/florianhartig/LearningBayes. Reuse permitted under Creative Commons Attribution-NonCommercial-ShareAlike 4.0 International License
+
+
+
 
 
