--- a/CommentedCode/04-RegressionModels/LM/LinearModel.Rmd
+++ b/CommentedCode/04-RegressionModels/LM/LinearModel.Rmd
@@ -103,3 +103,5 @@ for (i in selection) abline(sampleMatrix[i,1], sampleMatrix[i,1], col = "#111111
 ```
 
 
+---
+**Copyright, reuse and updates**: By Florian Hartig. Updates will be posted at https://github.com/florianhartig/LearningBayes. Reuse permitted under Creative Commons Attribution-NonCommercial-ShareAlike 4.0 International License
