--- a/CommentedCode/01-Principles/InferenceMethods.Rmd
+++ b/CommentedCode/01-Principles/InferenceMethods.Rmd
@@ -6,16 +6,33 @@ output:
 Statistical concepts, at the example of the coin flip model
 ===
 
-Assume we had 10 trials, 7 success, unknown coin, want to do inference to learn about the coin
+```{r global_options, include=FALSE}
+knitr::opts_chunk$set(fig.width=5, fig.height=5)
+```
 
-```{r}
+```{r, echo = F}
 rm(list=ls(all=TRUE))
 set.seed(123)
+```
+
+Assume I'm trying to guess if a coin comes up heads or tails. I have had 10 trials, and 7x success.
+
+```{r}
 trials = 10
 success = 7
 ```
 
-In the rest of this script, I will look at this data with the three most common inferential methods 
+What we want to know now is what my properties are regarding correctly guessing the outcome of the coin flip experiment. 
+
+### The model
+
+We will try to examine this data with a simple model that makes the following assumption: every time I throw the coin, I will have a probability of p to guess correctly. 
+
+For a single trial, this model is called the bernoulli-model; for multiple trials, it's calle the binomial model. It's easy to calculate the probabilities by hand, but you can also get it in r via the dbinom function. 
+
+### Overview
+
+In the rest of this script, I will look at this data with the binomial model, applying the three most common inferential methods 
 
 1. Maximum likelihood estimation
 2. Null-hypothesis significance testing
@@ -58,8 +75,10 @@ abline(v=leftCI, col = "green")
 rightCI <- parametervalues[which.min(abs(log(likelihood[which.max(likelihood):length(likelihood)]) - confidence.level)) + which.max(likelihood) -1]
 abline(v=rightCI, col = "green")
 
-
 ```
+
+Note: there are also other methods to look at uncertainty with likelihoods, e.g. the profile likelihood, see discussion [here](http://stats.stackexchange.com/questions/77528/what-is-the-relationship-between-profile-likelihood-and-confidence-intervals)
+
 
 ## Outcome of a MLE 
 
@@ -171,6 +190,8 @@ abline(v=leftCI, col = "darkgreen", lty = 2, lwd = 2)
 leftCI <- parametervalues[which.min(abs(cumPost - 0.975))]
 abline(v=leftCI, col = "darkgreen", lty = 2, lwd = 2)
 ```
+
+# Additional comments
 
 ## Long-term frequencies of errors and multiple testing
 
