--- a/CommentedCode/02-Samplers/Benchmarks/BenchmarkFunctions.Rmd
+++ b/CommentedCode/02-Samplers/Benchmarks/BenchmarkFunctions.Rmd
@@ -57,3 +57,8 @@ BananaSS <- function (p){
 }
 ```
 
+# Other Benchmarks
+
+* mlbench: Machine Learning Benchmark Problems  http://cran.r-project.org/web/packages/mlbench/
+
+
